Form for addition is completed

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Angular2 Seed</title>
+    <title>Project 1</title>
     <base href="/">
 </head>
 <body>
@@ -15,6 +15,7 @@
 <script src="/polyfills.bundle.js"></script>
 <script src="/vendor.bundle.js"></script>
 <script src="/main.bundle.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </body>
 </html>
